crates/carta/tests/snapshots/golden_writer__beamer__table__table-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endhead
a & b \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
