crates/carta/tests/snapshots/golden_writer__beamer__table__table-wide-unicode.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
項目 & 値 \\
\midrule\noalign{}
\endhead
名前 & 漢字テキスト \\
x & y \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
